<resources>
    <string name="app_name">PokemonApps</string>

    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data, please try again!</string>
    <string name="server_error">Server error, could get data, please try again!</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="stats">Stats</string>
    <string name="abilities">Abilities</string>
    <string name="types">Types</string>
    <string name="input_your_pokemon_nickname">Input your pokemon nickname</string>
</resources>