<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailPokemonActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Detail Pokemon"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivPokemon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivPokemon"
        tools:text="Bulbasaur" />

    <TextView
        android:id="@+id/tvHeightTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/height"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeightTitle"
        tools:text="7" />

    <TextView
        android:id="@+id/tvWeightTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/weight"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvHeight" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvWeightTitle"
        tools:text="7" />

    <TextView
        android:id="@+id/tvTypesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/types"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvWeight" />

    <TextView
        android:id="@+id/tvTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTypesTitle"
        tools:text="7" />

    <TextView
        android:id="@+id/tvAbilityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/abilities"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvTypes" />

    <TextView
        android:id="@+id/tvAbility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAbilityTitle"
        tools:text="7" />

    <TextView
        android:id="@+id/tvStatTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/stats"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvAbility" />

    <TextView
        android:id="@+id/tvStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatTitle"
        tools:text="7" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pb_loading"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:enabled="false"
        android:text="Catch"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>